adding cache busting lings to assets as a build step

--- a/public/fp/index.html
+++ b/public/fp/index.html
@@ -7,13 +7,13 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-touch-fullscreen" content="yes">
     <meta name="msapplication-tap-highlight" content="no">
-    <title>Flappy Plane</title>
-    <link rel='stylesheet' href='./css/canvas.css' />
-    <script src='./js/CocoonJS.js'></script>
-    <script src='./js/CocoonJS_App.js'></script>
-    <script src='./js/CocoonJS_App_ForCocoonJS.js'></script>
-    <script src='./js/CocoonJS_Ad.js'></script> 
-    <script src='./js/canvas.js'></script> 
+    <title>60fps - Flappy Plane</title>
+    <link rel='stylesheet' href='./css/canvas.css?rev=a4cefbec91d282bc766a62a4f28b61cf' />
+    <script src='./js/CocoonJS.js?rev=53eaf02909143e655f480bdd9e3d2f51'></script>
+    <script src='./js/CocoonJS_App.js?rev=7fe3f74611d2b8eb32aee3dca085cfe5'></script>
+    <script src='./js/CocoonJS_App_ForCocoonJS.js?rev=1530496b125d37a66648459d40ab5d29'></script>
+    <script src='./js/CocoonJS_Ad.js?rev=a94e3b96bc3b5d905e5d0d05f475afca'></script> 
+    <script src='./js/canvas.js?rev=0ec61a49153416f28eafff9487bb42c1'></script> 
   </head>
   <body>
   </body>
