--- a/public/jj/index.html
+++ b/public/jj/index.html
@@ -7,13 +7,13 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-touch-fullscreen" content="yes">
     <meta name="msapplication-tap-highlight" content="no">
-    <title>Jimmy Jump</title>
-    <link rel='stylesheet' href='./css/canvas.css' />
-    <script src='./js/CocoonJS.js'></script>
-    <script src='./js/CocoonJS_App.js'></script>
-    <script src='./js/CocoonJS_App_ForCocoonJS.js'></script>
-    <script src='./js/CocoonJS_Ad.js'></script> 
-    <script src='./js/canvas.js'></script> 
+    <title>60fps - Danny Jump</title>
+    <link rel='stylesheet' href='./css/canvas.css?rev=8932b2fc2a72461919302bb348add9fd' />
+    <script src='./js/CocoonJS.js?rev=53eaf02909143e655f480bdd9e3d2f51'></script>
+    <script src='./js/CocoonJS_App.js?rev=7fe3f74611d2b8eb32aee3dca085cfe5'></script>
+    <script src='./js/CocoonJS_App_ForCocoonJS.js?rev=1530496b125d37a66648459d40ab5d29'></script>
+    <script src='./js/CocoonJS_Ad.js?rev=a94e3b96bc3b5d905e5d0d05f475afca'></script> 
+    <script src='./js/canvas.js?rev=cd7066279aca1672346e6b3758a4a404'></script> 
   </head>
   <body>
   </body>
