--- a/public/fp/index.html
+++ b/public/fp/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, target-densitydpi=device-dpi"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"> 
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-touch-fullscreen" content="yes">
@@ -13,7 +13,7 @@
     <script src='./js/CocoonJS_App.js?rev=7fe3f74611d2b8eb32aee3dca085cfe5'></script>
     <script src='./js/CocoonJS_App_ForCocoonJS.js?rev=1530496b125d37a66648459d40ab5d29'></script>
     <script src='./js/CocoonJS_Ad.js?rev=a94e3b96bc3b5d905e5d0d05f475afca'></script> 
-    <script src='./js/canvas.js?rev=0ec61a49153416f28eafff9487bb42c1'></script> 
+    <script src='./js/canvas.js?rev=09656d17ee5cddacc9054fd30d72be10'></script> 
   </head>
   <body>
   </body>
