battle ship initial commit

--- a/public/battle_ship/index.html
+++ b/public/battle_ship/index.html
@@ -7,8 +7,9 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-touch-fullscreen" content="yes">
     <meta name="msapplication-tap-highlight" content="no">
-    <title>60fps - Rock Solid</title>
+    <title>60fps - Battle Ship</title>
     <link rel='stylesheet' href='./css/canvas.css?rev=b5e24edc5e3a08b5953ac2aef41b12fe' />
+    <script src='./js/phaser.js?rev=53eaf02909143e655f480bdd9e3d2f51'></script>
     <script src='./js/CocoonJS.js?rev=53eaf02909143e655f480bdd9e3d2f51'></script>
     <script src='./js/CocoonJS_App.js?rev=7fe3f74611d2b8eb32aee3dca085cfe5'></script>
     <script src='./js/CocoonJS_App_ForCocoonJS.js?rev=1530496b125d37a66648459d40ab5d29'></script>
