--- a/public/zombie_defence/index.html
+++ b/public/zombie_defence/index.html
@@ -7,14 +7,14 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-touch-fullscreen" content="yes">
     <meta name="msapplication-tap-highlight" content="no">
-    <title>60fps - Battle Ship</title>
+    <title>60fps - Zombie Defence</title>
     <link rel='stylesheet' href='./css/canvas.css?rev=b5e24edc5e3a08b5953ac2aef41b12fe' />
     <script src='./js/phaser.js?rev=78bc6cd0ac02e414b7f02d770136ce62'></script>
-    <script src='./js/CocoonJS.js?rev=53eaf02909143e655f480bdd9e3d2f51'></script>
-    <script src='./js/CocoonJS_App.js?rev=7fe3f74611d2b8eb32aee3dca085cfe5'></script>
-    <script src='./js/CocoonJS_App_ForCocoonJS.js?rev=1530496b125d37a66648459d40ab5d29'></script>
-    <script src='./js/CocoonJS_Ad.js?rev=a94e3b96bc3b5d905e5d0d05f475afca'></script> 
-    <script src='./js/canvas.js?rev=f66bfd660a9fa6dbb559cc86a1e76ca4'></script> 
+    <!--<script src='./js/CocoonJS.js?rev=53eaf02909143e655f480bdd9e3d2f51'></script> -->
+    <!--<script src='./js/CocoonJS_App.js?rev=7fe3f74611d2b8eb32aee3dca085cfe5'></script> -->
+    <!--<script src='./js/CocoonJS_App_ForCocoonJS.js?rev=1530496b125d37a66648459d40ab5d29'></script> -->
+    <!--<script src='./js/CocoonJS_Ad.js?rev=a94e3b96bc3b5d905e5d0d05f475afca'></script> -->
+    <script src='./js/canvas.js?rev=e6084304e3ba94f72bb4d4cb25be2947'></script> 
   </head>
   <body>
   </body>
